# HuggingFaceConfigHuba

./: config.py  connect_to_workspace.py  forms.py  main.py  models.py  pasted_text_1726406892782.txt  pasted_text_1726410261024.txt  pyproject.toml  utils.py
instance/: huggingface_tgi.db
static/css/: styles.css
static/js/: main.js
templates/: index.html
