[tool.poetry]
name = "repl-nix-huggingfaceconfighub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
paramiko = "^3.4.1"
psycopg2-binary = "^2.9.9"
cohere = "^5.9.2"
flask-socketio = "^5.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
